[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.x86_64-unknown-linux-gnu]
rustflags = ["-C", "linker=clang", "-C", "link-arg=-fuse-ld=lld"]

[dependencies]
axum = "0.6.17"
chrono = { version = "0.4.24", default-features = false }
config = "0.13.3"
once_cell = "1.17.1"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.160", features = ["derive"] }
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "macros", "postgres", "chrono", "uuid", "migrate"] }
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.4.0", features = ["trace"] }
tracing = "0.1.38"
tracing-bunyan-formatter = "0.3.7"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.17", features = ["registry", "env-filter"] }
uuid = { version = "1.3.1", features = ["v4"] }

[dev-dependencies]
reqwest = "0.11.16"
axum-macros = "0.3.7"
